[package]
name = "connectron"
version = "0.0.1"
authors = ["Katsutoshi Horie <mps299792458@gmail.com>"]
description = "Empty crate, used only to reserve the name."
documentation = "https://docs.rs/connectron"
homepage = "https://connectron.org"
repository = "https://github.com/connectron/connectron"
readme = "README.md"
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "connectron/connectron" }
travis-ci = { repository = "connectron/connectron" }
codecov = { repository = "connectron/connectron" }

[dependencies]
