[package]
name = "connectron-rtps"
version = "0.0.1"
authors = ["Katsutoshi Horie <mps299792458@gmail.com>"]
description = "Empty crate, used only to reserve the name."
documentation = "https://docs.rs/connectron-rtps"
homepage = "https://connectron.org"
repository = "https://github.com/connectron/connectron"
readme = "README.md"
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "connectron/connectron" }
travis-ci = { repository = "connectron/connectron" }
codecov = { repository = "connectron/connectron" }

[dependencies]
failure = "0.1"
failure_derive = "0.1"
libc = "0.2"
pnet = "0.20"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_test = "1.0"
